--- a/notebooks/cnn/cnn.ipynb
+++ b/notebooks/cnn/cnn.ipynb
@@ -6,7 +6,7 @@
       "name": "CNN.pynb",
       "provenance": [],
       "mount_file_id": "https://github.com/javapagar/KG_applied_to_ML/blob/main/notebooks/cnn/cnn.ipynb",
-      "authorship_tag": "ABX9TyMNEyTGXzMq4KGdyZJ3ltwQ"
+      "authorship_tag": "ABX9TyMOoJYxq0T2i3KIm47KWspP"
     },
     "kernelspec": {
       "name": "python3",
@@ -14,13 +14,12 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "accelerator": "GPU"
+    }
   },
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 6,
       "metadata": {
         "id": "-_jotgRwPJ66"
       },
@@ -57,18 +56,18 @@
         "      x.append(img_to_array(images))\n",
         "      y.append(folder)\n",
         "\n",
-        "  return np.array(x),y\n",
+        "  return x,y\n",
         "\n",
         "def load_save_image(path_train,path_test):\n",
         "  x_train, y_train = load_image_from_path(path_train)\n",
-        "  path = os.path.join(PATH_DRIVE,\"x_train.pkl\")\n",
+        "  path = os.path.join(PATH_DRIVE,\"x_train_orig.pkl\")\n",
         "  save_pickle(x_train,path)\n",
         "  del x_train\n",
         "  path = os.path.join(PATH_DRIVE,\"y_train_orig.pkl\")\n",
         "  save_pickle(y_train,path)\n",
         "  del y_train\n",
         "  x_test,y_test =load_image_from_path(path_test)\n",
-        "  path = os.path.join(PATH_DRIVE,\"x_test.pkl\")\n",
+        "  path = os.path.join(PATH_DRIVE,\"x_test_orig.pkl\")\n",
         "  save_pickle(x_test,path)\n",
         "  del x_test\n",
         "  path = os.path.join(PATH_DRIVE,\"y_test_orig.pkl\")\n",
@@ -81,16 +80,17 @@
         "  return np_utils.to_categorical(encode_list,len(label_list))\n",
         "\n",
         "def save_pickle(object,path):\n",
-        "  pickle.dump(object,open(path,'w'), protocol=4)\n",
+        "  pickle.dump(object,open(path,'wb'))\n",
         "\n",
-        "def load_pickle(path):\n",
+        "def load_pickle(filename):\n",
+        "  path = os.path.join(PATH_DRIVE,filename)\n",
         "  result=pickle.load(open(path,'rb'))\n",
         "  return result\n"
       ],
       "metadata": {
         "id": "bgtcRhtzT77L"
       },
-      "execution_count": 4,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -100,12 +100,12 @@
       ],
       "metadata": {
         "id": "vDhlfJL_dYZ1",
-        "outputId": "79efd582-8e2e-4e08-d65d-55962d0bd111",
+        "outputId": "a8eecf69-423a-4d25-8960-2605c9523b51",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -114,7 +114,11 @@
             "Grape___Esca_(Black_Measles)\n",
             "Grape___Leaf_blight_(Isariopsis_Leaf_Spot)\n",
             "Grape___Black_rot\n",
-            "Grape___healthy\n"
+            "Grape___healthy\n",
+            "Grape___healthy\n",
+            "Grape___Leaf_blight_(Isariopsis_Leaf_Spot)\n",
+            "Grape___Esca_(Black_Measles)\n",
+            "Grape___Black_rot\n"
           ]
         }
       ]
@@ -122,61 +126,28 @@
     {
       "cell_type": "code",
       "source": [
-        "x_train = load_pickle(\"y_train_orig\")\n",
-        "x_train[0]"
+        "x_train = load_pickle(\"x_train_orig.pkl\")\n",
+        "x_train = np.array(x_train)\n"
       ],
       "metadata": {
-        "id": "aeRWPGYMq_Zg",
-        "outputId": "3fe0585d-c40d-4655-deff-60012ebaa69a",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 36
-        }
+        "id": "aeRWPGYMq_Zg"
       },
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'Grape___Esca_(Black_Measles)'"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 9
-        }
-      ]
+      "execution_count": 4,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "y_test = load_pickle(\"y_train_orig.pkl\")\n",
         "labels = list(set(y_test))\n",
-        "result = encode_by_list(labels,y_test)\n",
-        "y_test[0],result[0]\n"
+        "y_test = encode_by_list(labels,y_test)\n",
+        "y_test=np.array(y_test)"
       ],
       "metadata": {
-        "id": "TXFCuSrMjRql",
-        "outputId": "d4ab0a07-bd17-457c-f7f6-c00a378d3881",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "TXFCuSrMjRql"
       },
-      "execution_count": 25,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "('Grape___healthy', array([0., 0., 0., 1.], dtype=float32))"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 25
-        }
-      ]
+      "execution_count": 8,
+      "outputs": []
     }
   ]
 }
