--- a/notebooks/cnn/cnn.ipynb
+++ b/notebooks/cnn/cnn.ipynb
@@ -19,7 +19,9 @@
         "from keras.utils import layer_utils, np_utils\n",
         "from keras import layers\n",
         "from keras import models\n",
-        "from keras.callbacks import ModelCheckpoint"
+        "from keras.callbacks import ModelCheckpoint\n",
+        "\n",
+        "from keras.applications import nasnet"
       ]
     },
     {
@@ -201,7 +203,12 @@
         "  model.add(layers.Dropout(0.5))\n",
         "  model.add(layers.Dense(4, activation='softmax'))\n",
         "\n",
-        "  return model\n"
+        "  return model\n",
+        "\n",
+        "def create_nasnet(height,width):  \n",
+        "  model = nasnet.NASNetMobile(input_shape=(height,width,3), include_top=True, weights=None, input_tensor=None, pooling=None, classes=100)\n",
+        "\n",
+        "  return model"
       ]
     },
     {
@@ -252,6 +259,33 @@
       "outputs": [],
       "source": [
         "cnn = cnn_model.fit(x=x_train, y = y_train, batch_size = 32, epochs= EPOCHS, verbose=1, validation_data=(x_test,y_test), shuffle= True,callbacks=callbacks)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "https://enmilocalfunciona.io/deep-learning-basico-con-keras-parte-6-nasnet/"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "nasnet_model = create_nasnet()  \n",
+        "nasnet_model.compile(loss='categorical_crossentropy', optimizer='sgd', metrics=['acc', 'mse'])\n",
+        "nasnet_model.summary() "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "nasnet = nasnet_model.fit(x=x_train, y=y_train, batch_size=32, epochs=10, verbose=1, validation_data=(x_test, y_test), shuffle=True) "
       ]
     }
   ],
